--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@ngrx/effects": "^9.1.2",
     "@ngrx/store": "^9.1.2",
+    "@ngrx/store-devtools": "^9.1.2",
+    "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
